2003-06-02  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b3

	* Fix a bug in the configuration wizard that would cause errors in
	  the custom fields configuration if magic_quotes_gpc was on

2003-05-31  Bharat Mediratta  <bharat@menalto.com> 1.3.5-cvs-b2

	* Fixed a bug in gallery/UserDB.php where we were introducing
	  a syntax error into .users/.htaccess

2003-05-31  Bharat Mediratta <bharat@menalto.com> 1.3.5-cvs-b1

	* Migrated 1.3.4-cvs-b51 to 1.3.4-cvs-b55 into 1.3.5-cvs-b1

2003-05-31  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b55 (HEAD)

	* Change the extension from .tar to .tar.gz when backing up
	  albums.
	
	* If gallery_remote.php or gallery_remote2.php is accessed from
	  the browser, exit with a nice message telling the user where
	  to find Gallery Remote (bug #687235).
	  
	* Fix bug #552569, where a filename could be quoted twice,
	 causing the upload to fail.
	  
	* Hopefully fix bug #595716, where NetPBM or ImageMagick
	  wouldn't execute properly if they were in a directory with
	  a space on Windows.

2003-05-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b54 (HEAD)

	* Quote the filename given to the jhead parser.  This resolves a
          bug related to spaces in files names.
          
        * Fix bug #550527, where double quotes in an album name would
          cause HTML weirdness and end up being truncated

2003-05-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b53 (HEAD)

	* Remove unnecessary function call

2003-05-30  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.4-cvs-b52 (HEAD)

	* Make the select box in the config wizard default to whichever
	  image manipulation program it found (until now, it always defaulted
	  to NetPBM).

2003-05-30  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-cvs-b51 (HEAD)

	* Patch #745960. Fixed $GALLERY_BASEDIR warning for publish_xp.php
	  (missed this one the first time around in -b25 fix).

2003-05-29  Beckett Madden-Woods  <beckett@beckettmw.com> 1.3.4-RC1
