@@ -1,3 +1,14 @@
+2003-06-02  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b4
+
+	* Fix bug #672943, where searching for a string with special
+	  regular expression characters would cause warnings.  Also,
+	  users can now use asterisks as wildcards in search strings.
+	  
+	* Fix bug #607440.  Gallery now allows .mp4 movies
+	
+	* Fix bug #581790.  Gallery doesn't strip HTML tags from 
+	  slideshow captions anymore.
+
 2003-06-02  Andrew Lindeman  <joyoflinux@yahoo.com> 1.3.5-cvs-b3
 
 	* Fix a bug in the configuration wizard that would cause errors in
